main section done

--- a/B12A01-landing-launchpad/Assets/index.html
+++ b/B12A01-landing-launchpad/Assets/index.html
@@ -29,6 +29,146 @@
         </div>
     </header>
 
+
+
+
+    <main>
+        <div class="action-parent">
+            <div class="action-child">
+                <p style="font-size: 42px; font-weight: bold;">See It in Action</p>
+                <p style="font-size: 24px; line-height: 30px;margin-top: 10px;">Explore the live preview and imagine your<br> brand in this bold new look.</p>
+                <button style="margin-top: 20px;" class="btn">Launch Live Preview</button>
+            </div>
+            <img style="border-radius: 50px;" src="./wc-mini.png" alt="">
+        </div>
+
+
+        <div class="join-section">
+            <div class="div">
+                <p style="text-align: center; font-size: 38px; font-weight: bold;">Joined Thousands of Productive Users</p>
+                <div class="join-child">
+                    <div>
+                        <span style="font-size: 80px; font-weight: bold; color: #4E47FF;">50K</span>
+                        <p style="text-align: center; line-height: 1px; color: gray;">Active Users</p>
+                    </div>
+                    <div>
+                        <span style="font-size: 80px; font-weight: bold; color: #4E47FF;">2M+</span>
+                        <p style="text-align: center; line-height: 1px; color: gray;">Focus Sessions</p>
+                    </div>
+                    <div>
+                        <span style="font-size: 80px; font-weight: bold; color: #4E47FF;">95%</span>
+                        <p style="text-align: center; line-height: 1px; color: gray;">Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div style="max-width: 1250px; margin: auto; margin-top: 50px;">
+            <p style="font-size: 42px; font-weight: bold; text-align: center;">What our users say</p>
+            <div style="display: flex; justify-content: space-between; margin-top: 15px;">
+                <div style="background-color: white; padding: 30px; border-radius: 20px;">
+                    <div>
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                    </div>
+                    <div style="margin-top: 8px;">
+                        <p style="font-size: 24px; font-weight: 500; line-height: 35px;">Loved by Designers</p>
+                        <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
+                    </div>
+                    <div style="display: flex; gap: 10px; align-items: center; margin-top: 12px;">
+                        <img style="border-radius: 50%;" src="./Assets/avatar.png" alt="">
+                        <div>
+                            <p>Reviewer name</p>
+                            <p style="color: gray;">Date</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div style="background-color: white; padding: 30px; border-radius: 20px;">
+                    <div>
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                    </div>
+                    <div style="margin-top: 8px;">
+                        <p style="font-size: 24px; font-weight: 500; line-height: 35px;">Loved by Designers</p>
+                        <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
+                    </div>
+                    <div style="display: flex; gap: 10px; align-items: center; margin-top: 12px;">
+                        <img style="border-radius: 50%;" src="./Assets/avatar.png" alt="">
+                        <div>
+                            <p>Reviewer name</p>
+                            <p style="color: gray;">Date</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div style="background-color: white; padding: 30px; border-radius: 20px;">
+                    <div>
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                        <img src="./icon-star.png" alt="">
+                    </div>
+                    <div style="margin-top: 8px;">
+                        <p style="font-size: 24px; font-weight: 500; line-height: 35px;">Loved by Designers</p>
+                        <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
+                    </div>
+                    <div style="display: flex; gap: 10px; align-items: center; margin-top: 12px;">
+                        <img style="border-radius: 50%;" src="./Assets/avatar.png" alt="">
+                        <div>
+                            <p>Reviewer name</p>
+                            <p style="color: gray;">Date</p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+            <div style="text-align: center; margin-top: 50px; background-color: white; padding: 50px; border-radius: 20px;">
+                <p style="font-size: 50px; font-weight: bold; line-height: 70px;">Ready to focus better</p>
+                <p style="color: gray; line-height: 90px;">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn">Ger Started Free</button><br>
+                <img style="margin-top: 40px; border-radius: 20px;" src="./wc-big.png" alt="">
+            </div>
+
+
+
+                <div style="display: flex; align-items: center; justify-content: space-between; margin-top: 50px;">
+                    <div>
+                        <p style="font-size: 97px; font-weight: bold; line-height: 120px;">Let’s Get in<br> Touch</p>
+                    </div>
+                    <div>
+                        <p style="font-size: 18px; font-weight: 600;">Email</p>
+                        <input style="padding: 20px 200px 20px 10px; border: none; border-radius: 5px; margin-top: 7px;" type="text" placeholder="example@email.com">
+                        <p style="font-size: 18px; font-weight: 600; margin-top: 20px;">Name</p>
+                        <input style="padding: 20px 200px 20px 10px; border-radius: 5px; border: none; margin-top: 7px;" type="text" placeholder="full name">
+                        <p style="font-size: 18px; font-weight: 600; margin-top: 20px;">Message</p>
+                        <textarea style="padding: 10px 216px 50px 10px; border: none; border-radius: 5px; margin-top: 7px;" name="" id="" placeholder="write your message...."></textarea><br>
+                        <button style="margin-top: 10px; padding: 15px 137px;" class="btn">Get in Touch</button>
+                    </div>
+                </div>
+
+
+    </main>
+
+
+    
     
   
 </body>
