footer section done

--- a/B12A01-landing-launchpad/Assets/index.html
+++ b/B12A01-landing-launchpad/Assets/index.html
@@ -168,6 +168,18 @@
     </main>
 
 
+
+    <footer>
+        <div style="margin-top: 50px; text-align: center; background-color: white; padding: 50px;">
+            <p style="font-size: 100px; font-weight: bold; color: #4E47FF;">LOGO</p>
+            <p>Ready to elevate your online presence? Contact us today to<br> discuss your project and discover how we can bring your vision to life.</p>
+            <div style="display: flex; gap: 30px ;justify-content: center; margin-top: 20px;">
+                <a style="text-decoration: none; color: gray;" href="#">Home</a>
+                <a style="text-decoration: none; color: gray;" href="#">About</a>
+                <a style="text-decoration: none; color: gray;" href="#">How It Works</a>
+            </div>
+        </div>
+    </footer>
     
     
   
